test/files/semantic/reject/var_redef_param.neo
func f(x: int, x: float)

end
